# DemoProjectForClarius

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/at/alysis/demoapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  caralgo.h  native-lib.cpp
app/src/main/java/at/alysis/demoapplication/: DemoApplication.kt  MainActivity.kt
app/src/main/java/at/alysis/demoapplication/quipu/: CarAlgo.kt  CarAlgoDef.kt
app/src/main/java/at/alysis/demoapplication/quipu/di/: CarAlgoModule.kt
app/src/main/java/at/alysis/demoapplication/service/clarius/: CastService.java  ImageConverter.java
app/src/main/java/at/alysis/demoapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/at/alysis/demoapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
